# memvid

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  MV2_SPEC.md  Makefile  README.md  REFACTOR_PLAN.md  SECURITY.md  old_AGENTS.md  project.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: settings.toml
crates/common/: Cargo.toml
crates/context/: Cargo.toml
crates/context/src/: main.rs
crates/core/: README.md
crates/embedder/: Cargo.toml
crates/ingestor/: Cargo.toml
crates/migrator/: Cargo.toml
deploy/systemd/: memvid-embedder.service  memvid-ingestor.service
devenv/CSharp/: AGENTS.md
devenv/Cpp/: AGENTS.md
devenv/Go/: AGENTS.md
devenv/Java/: AGENTS.md
devenv/Javascript/: AGENTS.md
devenv/KDE_Vulkan/: AGENTS.md
devenv/PHP/: AGENTS.md
devenv/Python/: AGENTS.md
devenv/Ruby/: AGENTS.md
devenv/Rust/: AGENTS.md
devenv/Typescript/: AGENTS.md
docs/: autofdo-investigation.md  memvid-context.md  memvid-librarian.md  memvid-write.md  self-extracting-installer.md
docs/i18n/: README.bn.md  README.cs.md  README.es.md  README.fr.md  README.hi.md  README.ja.md  README.ko.md  README.nl.md  README.so.md  README.zh-CN.md
packaging/: build-self-extracting-installer.sh  install-payload.sh  install.sh
scripts/: memvid-librarian-cold.sh  queue_pipeline_smoke.sh
src/memvid/: ask.rs  builder.rs
templates/: AGENTS.md  CLAUDE.md  GEMINI.md  README.md
tests/: test_installer.sh  test_shard_lifecycle.sh  test_wrappers.sh
(+9 files in other folders)
